--- a/index.html
+++ b/index.html
@@ -8,5 +8,18 @@
 </head>
 <body>
     <h1>Karla Murillo</h1>
+    <img src="https://placekitten.com/400/400"
+    alt="placeholder image">
+
+    <dt>Student Number</dt>
+   <dd>041106956</dd>
+    <dt>Program that I am taking</dt>
+    <dd>Interactive Media Design</dd>
+    <dt>Course</dt>
+    <dd>MTM6201 - Web Dev II</dd>
+    <dt> Interesting Fact</dt>
+    <dd>I Would love to learn a lot of how to code, I would also love to be a graphic designer</dd>
+
+
 </body>
 </html>
