--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Karla Murillo</h1>
-    <img src="https://placekitten.com/400/400"
+    <img src="images/yo-2.jpg"
     alt="placeholder image">
 
     <dt>Student Number</dt>
