--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Karla Murillo</h1>
-    <img src="images/yo-2.jpg" width="400"
+    <img src="images/WhatsApp Image 2023-08-07 at 21.44.54.jpg" width="600" height="550"
     alt="placeholder image">
 
     <dt>Student Number</dt>
